# lumina-play

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
dev-dist/: sw.js
src/: App.tsx  index.css  store.ts  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: Browser.tsx  ErrorBoundary.tsx  Home.tsx  MediaCard.tsx  MovieDetail.tsx  OrientationLock.tsx  Player.tsx  Preferences.tsx  SeriesDetail.tsx  Sidebar.tsx  SourceManager.tsx  TopBar.tsx  UpdateBanner.tsx  WelcomePinDialog.tsx  icons.tsx
src/lib/: adult-detector.ts  cache.ts  category-display.ts  content-detector.ts  crypto.ts  datetime.ts  epg-cache.ts  http.ts  i18n.ts  kv.ts  m3u-parser.ts  mpv.ts  platform.ts  playback-engine.ts  proxy.ts  search.ts  storage.ts  update-checker.ts  virtual-categories.ts  xmltv-parser.ts  xtream-api.ts  xtream-detect.ts
