[package]
name = "lumina-play"
version = "0.1.4"
description = "Lumina Play — modern IPTV player"
authors = ["Jer"]
edition = "2021"

[lib]
name = "lumina_play_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-http = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
